@@ -21,6 +21,7 @@ FIXES
 ENHANCEMENTS
 * Added new flag to cgi.cfg: tac_cgi_hard_only to show only HARD states (John Frickson)
 * Add broker-event for the end of a timed event (NEBTYPE_TIMEDEVENT_END) (John Frickson)
+* There is no Macro to retrieve addresses of hostgroup members (now $HOSTGROUPMEMBERADDRESSES$) (John Frickson)
 
 
 4.2.4 - 2016-12-07
